# safecode-auditor

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: safecode-scan.yml
safecode_auditor/: cli.py
scanner/: config_checker.py  expression_parser.py  firebase_analyzer.py  secret_sniffer.py
test_targets/: .env  applimode_real.rules  ast_test.rules  auth_no_owner.rules  bad_config.py  docker-compose.yml  real_case_1.rules  team_timesheets_real.rules  twitter_clone_real.rules  weak_uid.rules
tests/: test_expression_parser.py  test_firebase_ast.py  test_sniffer.py
