[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safecode-auditor"
version = "0.1.0"
description = "A lightweight security scanner for vibe-coded applications"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
safecode = "safecode_auditor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scanner", "safecode_auditor"]